--- a/index.html
+++ b/index.html
@@ -4,5 +4,29 @@
 src='//fw-cdn.com/11530908/4188667.js'
 chat='true' widgetId='443dcc56-1834-4b0f-a53d-41a307c2107b'>
 </script>
+
+<script type="text/javascript">
+      window.ymConfig = {"bot":"x1712706067369","host":"https://r4.cloud.yellow.ai"};
+    (function() {
+        var w = window,
+            ic = w.YellowMessenger;
+        if ("function" === typeof ic) ic("reattach_activator"), ic("update", ymConfig);
+        else {
+            var d = document,
+                i = function() {
+                    i.c(arguments)
+                };
+            function l() {
+                var e = d.createElement("script");
+                e.type = "text/javascript", e.async = !0, e.src = "https://cdn.yellowmessenger.com/plugin/widget-v2/latest/dist/main.min.js";
+                var t = d.getElementsByTagName("script")[0];
+                t.parentNode.insertBefore(e, t)
+            }
+            i.q = [], i.c = function(e) {
+                i.q.push(e)
+            }, w.YellowMessenger = i, w.attachEvent ? w.attachEvent("onload", l) : w.addEventListener("load", l, !1)}
+    })();
+    </script>
+  
 </body>
 </html>
