--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <html>
 <body>
+<div>
+      <iframe
+src="https://www.chatbase.co/chatbot-iframe/_LzgQKC03uyzG-ZOiOdmf"
+title="Chatbot"
+width="100%"
+style="height: 100%; min-height: 700px"
+frameborder="0"
+></iframe>
+
+</div>
+     
+<div> 
 <script
 src='//fw-cdn.com/11530908/4188667.js'
 chat='true' widgetId='443dcc56-1834-4b0f-a53d-41a307c2107b'>
 </script>
-
 <script type="text/javascript">
       window.ymConfig = {"bot":"x1712706067369","host":"https://r4.cloud.yellow.ai"};
     (function() {
@@ -27,6 +38,6 @@ chat='true' widgetId='443dcc56-1834-4b0f-a53d-41a307c2107b'>
             }, w.YellowMessenger = i, w.attachEvent ? w.attachEvent("onload", l) : w.addEventListener("load", l, !1)}
     })();
     </script>
-  
+</div>
 </body>
 </html>
