--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<div>
+<div style="height: 300;position: relative;">
       <iframe
 src="https://www.chatbase.co/chatbot-iframe/_LzgQKC03uyzG-ZOiOdmf"
 title="Chatbot"
@@ -11,7 +11,7 @@ frameborder="0"
 
 </div>
      
-<div> 
+<div style="position: absolute"> 
 <script
 src='//fw-cdn.com/11530908/4188667.js'
 chat='true' widgetId='443dcc56-1834-4b0f-a53d-41a307c2107b'>
