--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<div style="height: 300;position: relative;">
+<div style="height: 200;position: relative;">
 <h3>Chatbase POC</h3>
 <iframe
 src="https://www.chatbase.co/chatbot-iframe/_LzgQKC03uyzG-ZOiOdmf"
@@ -11,6 +11,24 @@ frameborder="0"
 ></iframe>
 
 </div>
+
+<div style="height: 100;position: absolute;"></div>
+<h3>Intercom POC</h3>
+<script>
+    window.intercomSettings = {
+      api_base: "https://api-iam.intercom.io",
+      app_id: "lsdbkaeu",
+      name: user.name, // Full name
+      user_id: user.id, // a UUID for your user
+      email: user.email, // the email for your user
+      created_at: user.createdAt // Signup date as a Unix timestamp
+    };
+  </script>
+</div>
+  <script>
+  // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/lsdbkaeu'
+  (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/lsdbkaeu';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(document.readyState==='complete'){l();}else if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+  </script>
      
 <div style="position: absolute"> 
 <script
