--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<div style="height: 200;position: absolute;">
+<div style="height: 200;position: relative;">
 <h3>Chatbase POC</h3>
 <iframe
 src="https://www.chatbase.co/chatbot-iframe/_LzgQKC03uyzG-ZOiOdmf"
@@ -12,7 +12,7 @@ frameborder="0"
 
 </div>
 
-<div style="height: 100;position: absolute;">
+<div style="height: 100;position: relative;">
 <h3>Intercom POC</h3>
 <script>
 // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/lsdbkaeu'
