--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ frameborder="0"
 
 </div>
 
-<div style="height: 100;position: relative;">
+<div style="height: 100;position: absolute;">
 <h3>Intercom POC</h3>
 <script>
 // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/lsdbkaeu'
