--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 src="https://www.chatbase.co/chatbot-iframe/_LzgQKC03uyzG-ZOiOdmf"
 title="Chatbot"
 width="100%"
-style="height: 100%; min-height: 700px"
+style="height: 50%; min-height: 300px"
 frameborder="0"
 ></iframe>
 
 </div>
 
-<div style="height: 100;position: absolute;">
+<div style="height: 100;position: fixed;">
 <h3>Intercom POC</h3>
 <script>
 // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/lsdbkaeu'
