--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@ frameborder="0"
 <div>
 <h3>Intercom POC</h3>
 <script>
+  window.intercomSettings = {
+    api_base: "https://api-iam.intercom.io",
+    app_id: "lsdbkaeu",
+  };
+</script>
+
+<script>
 // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/lsdbkaeu'
 (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/lsdbkaeu';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(document.readyState==='complete'){l();}else if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
-</script>
-<script>
-  window.Intercom("boot", {
-  api_base: "https://api-iam.intercom.io",
-  app_id: "lsdbkaeu",
-
-});
 </script>
 </div>
     
