--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ frameborder="0"
   window.intercomSettings = {
     api_base: "https://api-iam.intercom.io",
     app_id: "lsdbkaeu",
+    user_id: "57d15269-6aad-401e-9289-6c932e60f7e8"
   };
 </script>
 
